force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <pluralLabel>Milestones</pluralLabel>
    <nameField>
    <label>Name</label>
    <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>MasterDetail</type>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    </fields>
    <fields>
    <fullName>Percent_Complete__c</fullName>
    <label>Percent Complete</label>
    <type>Percent</type>
    <precision>2</precision>
    <scale>2</scale>
    </fields>
    </CustomObject>