force-app/main/default/objects/Milestone__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <label>Percent Complete</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>