force-app/main/default/objects/Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
  Percent_Complete__c = 0,
  &quot;Not Started&quot;,
  IF(
    Percent_Complete__c = 100,
    &quot;Complete&quot;,
    &quot;In Progress&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>